name:               Site
version:            1.0
build-type:         Simple
cabal-version:      >= 1.10

executable Site
  main-is:          Site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.6.*
                  , filepath
                  , old-locale
  ghc-options:      -threaded
  default-language: Haskell2010
