name:               Site
version:            1.0
build-type:         Simple
cabal-version:      >= 1.10

executable Site
  main-is:          Site.hs
  other-modules:    Austrian
  build-depends:    base == 4.*
                  , containers
                  , filepath
                  , hakyll >= 4.7
                  , old-locale
                  , pandoc
                  , time
  ghc-options:      -threaded
  default-language: Haskell2010
